--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
+            <h2>Curso de HTML com CSS3</h2>
             <p>Texto do Artigo 001</p>
         </article>
         <article>
-            <h2>Artigo 002></h2>
+            <h2>Curso de Java</Script>></h2>
             <p>Texto Artigo 002</p>
         </article>
 
